# MemGate

./: .gitignore  Cargo.toml  HOW_TO_TEST.md  LICENSE  PROOF_IT_WORKS.md  README.md
examples/: demo_working.rs  hardware_simulation.rs  inspect_memory.rs  memory_mapping.rs  scan_memory.rs
src/: lib.rs  main.rs  memgate.rs
src/allocator/: mod.rs  translation.rs  vma.rs
src/config/: device_config.rs  mod.rs  parser.rs
src/hardware/: device.rs  mmio.rs  mod.rs
src/layout/: layout.rs  mod.rs  region.rs  template.rs
src/memory/: mapping.rs  mod.rs  protection.rs  region.rs
src/mmio/: device.rs  manager.rs  mod.rs
src/process/: mem_access.rs  mod.rs  process.rs
src/utils/: error.rs  hex.rs  mod.rs
templates/: custom_soc.yaml  minimal.json  stm32f103.toml
