[package]
name = "memgate"
version = "0.1.0"
edition = "2021"
authors = ["IoTWizz <iotwizz@example.com>"]
description = "Memory Gateway - Bridge guest firmware memory to real Linux memory for IoT emulation"
keywords = ["memory", "virtualization", "iot", "embedded", "emulation"]
categories = ["embedded", "hardware-support", "memory-management", "simulation"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iotwizz/memgate"
homepage = "https://github.com/iotwizz/memgate"
documentation = "https://docs.rs/memgate"

[lib]
name = "memgate"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9"
libc = "0.2"
nix = { version = "0.29", features = ["mman", "process"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
python = ["pyo3"]
cli = ["clap"]

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]
optional = true

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[[bin]]
name = "memgate"
path = "src/bin/cli.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true